# vulkan_best_practice_for_mobile_developers

./: .copyrightignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README.md  index.html
.github/ISSUE_TEMPLATE/: issue-template.md
assets/shaders/: base.frag  base.vert  triangle.frag  triangle.vert
bldsys/cmake/: android_package.cmake  android_sync_assets.cmake  android_sync_folder.cmake  create_gradle_project.cmake  create_sample_project.cmake  global_options.cmake  sample_helper.cmake  utils.cmake
bldsys/scripts/: download_assets.py  generate_android_gradle.bat  generate_android_gradle.sh  generate_sample.bat  generate_sample.sh
bldsys/toolchain/: android_gradle.cmake  android_nsight_tegra.cmake
docs/: build.md  controls.md  create_sample.md  debug_graphs.md  faq.md  memory_limits.md  misc.md  testing.md  wishlist.md
docs/doxygen/: doxyfile
framework/: CMakeLists.txt  buffer_pool.cpp  buffer_pool.h  cache_resource.h  cache_resource.inl  command_record.cpp  command_record.h  command_replay.cpp  command_replay.h  common.cpp  common.h  debug_info.cpp  debug_info.h  fence_pool.cpp  fence_pool.h  glsl_compiler.cpp  glsl_compiler.h  gltf_loader.cpp  gltf_loader.h  graphics_pipeline_state.h  gui.cpp  gui.h  postprocess.cpp  postprocess.h  profiler.cpp  profiler.h  render_context.cpp  render_context.h  render_frame.cpp  render_frame.h  render_pipeline.cpp  render_pipeline.h  render_target.cpp  render_target.h  resource_binding_state.cpp  resource_binding_state.h  resource_cache.cpp  resource_cache.h  resource_record.cpp  resource_record.h  (+14 more)
framework/common/: error.cpp  error.h  glm_common.h  helpers.h  logging.h  resource_caching.h  utils.cpp  utils.h  vk_common.cpp  vk_common.h
framework/core/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device.cpp  device.h  frame.cpp  frame.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  (+18 more)
samples/: CMakeLists.txt  vulkan_basics.md
samples/advanced/afbc/: CMakeLists.txt  afbc.cpp  afbc.h  afbc_tutorial.md
samples/advanced/command_buffer_usage/: CMakeLists.txt  command_buffer_usage.cpp  command_buffer_usage.h  command_buffer_usage_tutorial.md
samples/advanced/descriptor_management/: descriptor_management.cpp  descriptor_management.h
samples/advanced/pipeline_cache/: CMakeLists.txt  pipeline_cache.cpp  pipeline_cache.h  pipeline_cache_tutorial.md
samples/advanced/render_passes/: CMakeLists.txt  render_passes.cpp  render_passes.h
samples/advanced/render_subpasses/: CMakeLists.txt  render_subpasses.cpp  render_subpasses.h
samples/advanced/surface_rotation/: CMakeLists.txt  surface_rotation.cpp  surface_rotation.h  surface_rotation_tutorial.md
samples/advanced/swapchain_images/: CMakeLists.txt  swapchain_images.cpp  swapchain_images.h
samples/afbc/: CMakeLists.txt  afbc.cpp  afbc.h  afbc_tutorial.md
samples/basic/hello_triangle/: CMakeLists.txt  hello_triangle.cpp  hello_triangle.h
samples/hello_triangle/: CMakeLists.txt  hello_triangle.cpp  hello_triangle.h
samples/performance/afbc/: CMakeLists.txt  afbc.cpp  afbc.h  afbc_tutorial.md
samples/performance/command_buffer_usage/: command_buffer_usage.cpp  command_buffer_usage.h  command_buffer_usage_tutorial.md
samples/performance/descriptor_management/: CMakeLists.txt  descriptor_management_tutorial.md
samples/performance/layout_transitions/: CMakeLists.txt  layout_transitions.cpp  layout_transitions.h  layout_transitions_tutorial.md
samples/performance/pipeline_barriers/: CMakeLists.txt  pipeline_barriers.cpp  pipeline_barriers.h  pipeline_barriers_tutorial.md
samples/performance/pipeline_cache/: CMakeLists.txt
samples/performance/render_passes/: CMakeLists.txt  render_passes_tutorial.md
samples/performance/render_subpasses/: render_subpasses.cpp  render_subpasses.h  render_subpasses_tutorial.md
samples/performance/specialization_constants/: CMakeLists.txt  specialization_constants.cpp  specialization_constants.h  specialization_constants_tutorial.md
samples/performance/surface_rotation/: CMakeLists.txt  surface_rotation.cpp  surface_rotation.h
samples/performance/swapchain_images/: CMakeLists.txt  swapchain_images.cpp
samples/performance/wait_idle/: CMakeLists.txt  wait_idle.cpp  wait_idle.h  wait_idle_tutorial.md
samples/pipeline_cache/: CMakeLists.txt  pipeline_cache.cpp  pipeline_cache.h
samples/render_passes/: CMakeLists.txt  render_passes.cpp  render_passes.h  render_passes_tutorial.md
samples/surface_rotation/: CMakeLists.txt  surface_rotation.cpp  surface_rotation.h  surface_rotation_tutorial.md
samples/swapchain_images/: CMakeLists.txt  swapchain_images.cpp  swapchain_images.h  swapchain_images_tutorial.md
shaders/: base.frag  base.vert  imgui.frag  imgui.vert  pbr.frag  pbr.vert  triangle.frag  triangle.vert
tests/: CMakeLists.txt
tests/system_test/: CMakeLists.txt  system_test.py
tests/system_test/sub_tests/bonza/: CMakeLists.txt  bonza.cpp  bonza.h
tests/system_test/sub_tests/sponza/: sponza.cpp  sponza.h
tests/system_test/test_framework/: CMakeLists.txt  gltf_loader_test.cpp  gltf_loader_test.h  vulkan_test.cpp  vulkan_test.h
vulkan_best_practice/: CMakeLists.txt  sample_controller.cpp  sample_controller.h  vulkan_best_practice.cpp  vulkan_best_practice.h
vulkan_best_practice/android/: AndroidManifest.xml
vulkan_best_practice/android/java/com/arm/vulkan_best_practice/: BPNativeActivity.java  BPSampleActivity.java  Sample.java  SampleArrayAdapter.java  TabFragment.java  ViewPagerAdapter.java
vulkan_best_practice/android/res/layout/: bp_sample_activity.xml  bp_sample_activity_main.xml  bp_sample_fragment_tab.xml  bp_sample_listview_item.xml
vulkan_best_practice/android/res/menu/: main_menu.xml
vulkan_best_practice/android/res/mipmap-anydpi-v26/: ic_launcher.xml
vulkan_best_practice/android/res/values/: colors.xml  strings.xml  styles.xml
vulkan_best_practice/android/res/xml/: provider_paths.xml
(+140 files in other folders)
